Corrections typage dynamique et adaptation tablette, amélioration de la barre de recherche.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,19 +6,21 @@
     src: url("Raleway-VariableFont_wght.ttf");
 }
 
-main, section {
+main, section, nav {
     font-family: Raleway, Verdana, Arial, serif;
     line-height: 0.7;
-    margin: 40px;
+    margin: 20px;
 }
 
 h1 {
     font-size: 24px;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 p, nav, button {
     font-size: 16px;
+    white-space: nowrap;
 }
 
 /* ********** HEADER ********** */
@@ -28,15 +30,16 @@ p, nav, button {
     display: flex;
     justify-content: space-between;
     padding-left: 15px; /* sinon décalage par rapport haut de page */
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 40px;
     margin-right: 60px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 
 #logo {
     width: 100px;
-    height: 50px;
+    height: 47px;
+    margin-top: 10px;
     padding-top: 20px;
 }
 
@@ -46,7 +49,9 @@ nav ul li {
 }
 
 nav ul li a:hover {
-    text-decoration: overline #0065fc;
+    color: #0065fc;
+    border-top: 2px #0065fc solid;
+    padding-top: 50px;
 }
 
 a {
@@ -61,7 +66,6 @@ ul {
 /* ********** MAIN ********** */
 
 /* ********** INTRO ********** */
-
 /* ***** BARRE DE RECHERCHE ***** */
 
 #search-bar, input[value] {
@@ -76,23 +80,26 @@ ul {
 .fa-solid.fa-location-dot {
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    padding-top: 15px;
-    padding-bottom: 15px;
     padding-left: 20px;
     padding-right: 20px;
-    border-top: 2px #f2f2f2 solid;
-    border-bottom: 2px #f2f2f2 solid;
+    border-top: 1px #f2f2f2 solid;
+    border-bottom: 1px #f2f2f2 solid;
     background-color: #f2f2f2;
     color: black;
 }
 
 #search {
-    padding-left: 20px;
-    border-top: 2px #f2f2f2 solid;
-    border-bottom: 2px #f2f2f2 solid;
+    margin-left: 15px;
+    padding-left: 15px;
+    border-top: 1px #f2f2f2 solid;
+    border-bottom: 1px #f2f2f2 solid;
     border-left: hidden;
     border-right: hidden;
     font-weight: bold;
+}
+
+#search:focus {
+    outline: none;
 }
 
 #search-button {
@@ -111,6 +118,7 @@ ul {
     display: flex;
     font-weight: bold;
     font-size: 16px;
+    wrap: flex-wrap;
 }
 
 .transparent-button{
@@ -128,6 +136,7 @@ ul {
     border: 3px #d4d4d4 solid;
     border-left: hidden;
     flex: none;
+    wrap: start
 }
 
 .filter-button:hover {
@@ -135,8 +144,8 @@ ul {
 }
 
 .blue-icon {
-    margin-right: 15px;
-    padding: 15px;
+    margin-right: 16px;
+    padding: 16px;
     border-radius: 50%;
     background-color: #deebff;
     font-size: 18px;
@@ -167,13 +176,23 @@ ul {
     nav ul {
         flex-direction: column;
     }
+
+    nav ul li {
+        padding-bottom: 20px;
+    }
+
+    nav ul li a:hover {
+        border-top: hidden;
+        border-left: 2px #0065fc solid;
+        padding-top: 15px;
+    }
 }
 
 /* *** >PORTRAIT *** */
 
 @media screen and (max-width: 992px) and (orientation:portrait)
 {
-    /* à compléter */
+    /* à compléter, l'idée serait de reprendre ce qui est fait pour téléphone et adapter à la taille écran tablette? */
 }
 
 
